# RasPass

./: .gitignore  CMakeLists.txt  Communication.py  README.md  main.cpp
App/: AppComm.py  PasswordView.py  Popup.py  RasPassApp.py  ScrollableFrame.py  StartScreen.py  crypto.py  cryptotest.py  main.py  requirements.txt
App/imgs/: logo.icns
Metadata/: req_format.json  resp_format.json
Pico/: PicoComm.py  crypt.py  database.py  db.py  main.py  write-read-ex.py
Pico/libraries/: PicoComm.py  adafruit_fingerprint.py  auth.py  communication.py  crypto.py  db.py  flashrw.py  localdb.py
